--- a/vistas/privado/panel_principal.html
+++ b/vistas/privado/panel_principal.html
@@ -14,7 +14,8 @@
     <!-- TODO Llamada al icono de la página web -->
     <link type="image/png" rel="icon" href="../../recursos/imagenes/icono.svg">
     <!-- *Llamada a las hojas de estilos propios de css -->
-
+    <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
+    <link href="/recursos/estilos/privado/panel_principal.css" rel="stylesheet">
     <!-- *Llamada a las hojas de estilos del framework -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -25,12 +26,26 @@
 <body>
 
     <header>
-
+        <nav class="navbar bg-color-5blue fixed-top position-relative">
+            <div class="container-fluid m-3">
+                <div class="d-flex align-items-center collapse-div">
+                    <h1 class="collapse-fea">FEASVERSE - </h1>
+                    <h2 class="collapse-admin"> Administrador</h2>
+                </div>
+                <div class="linea"></div>
+                <form class="d-flex align-items-center">
+                    <h1 class="navbar-brand text-white titillium-web-semibold margin-user">Usuario</h1>
+                    <button class="btn btn-outline-primary" type="button">
+                        <img src="/recursos/imagenes/icons/exitUser.svg" width="50px" height="50">
+                    </button>
+            </div>
+        </nav>
     </header>
 
     <main>
-        <h3 id="mainTitle"></h3>
+        <h3 id="mainTitle" class="titillium-web-extralight-italic"></h3>
     </main>
+
     <!-- *Llamada al controlador de la página web -->
     <script type="text/javascript" src="../../controlador/utilidades(plantillas)/privado.js"></script>
     <!-- *Llamada al controlador del sitio privado -->
