--- a/vistas/privado/clientes.html
+++ b/vistas/privado/clientes.html
@@ -50,14 +50,15 @@
                 </div>
                 <div class="col-lg-12">
                     <!--div tabla-->
-                    <div class="col-lg-1 titillium-web-light text-center text-white bg-color-3blue">
+                    <div class="table_name col-lg-1 titillium-web-light text-center text-white bg-color-3blue">
                         <h6>Tabla</h6>
                     </div>
-                    <div class="col-lg-12 bg-color-3blue">
+                    <div class="tabla_contenido col-lg-12 bg-color-3blue">
+                        <br>
                         <!--div para la tabla-->
                         <div class="col-lg-10 offset-lg-1">
                             <!-- Tabla para mostrar los registros existentes -->
-                            <table class="table table-hover">
+                            <table class="table table-hover bg-color-5blue">
                                 <!-- Encabezado de la tabla para mostrar la cantidad de registros y los títulos de las columnas -->
                                 <thead>
                                     <tr>
@@ -74,12 +75,30 @@
                                     </tr>
                                 </thead>
                                 <!-- Cuerpo de la tabla para mostrar un registro por fila -->
-                                <tbody id="tableBody"></tbody>
+                                <tbody id="tableBody" class="table-group-divider">
+                                    <tr>
+                                        <th scope="row">1</th>
+                                        <td>Jacobo</td>
+                                        <td>Emiliano</td>
+                                        <td>765839343-3</td>
+                                        <td>5434-5343</td>
+                                        <td>emi.jaco@gmail.com</td>
+                                        <td>Vigente</td>
+                                    </tr>
+                                </tbody>
                             </table>
+                            <br>
                         </div>
                         <!--div para los botones-->
-                        <div>
-
+                        <div class="d-flex">
+                            <div>
+                                <button type="button" class="btn btn-primary titillium-web-regular me-2 bg-color-5blue"><i class="bi bi-send"></i>
+                                    Bloquear</button>
+                            </div>
+                            <div>
+                                <button type="button" class="btn btn-primary titillium-web-regular bg-color-5blue"><i class="bi bi-send"></i>
+                                    Desbloquear</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -90,5 +109,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
         <!-- *Llamada al controlador de la página web -->
         <script type="text/javascript" src="../../controlador/utilidades(plantillas)/privado.js"></script>
+        <script type="text/javascript" src="../../controlador/privado/cliente.js"></script>
     </body>
 </html>
