--- a/vistas/privado/panel_principal.html
+++ b/vistas/privado/panel_principal.html
@@ -24,34 +24,94 @@
 </head>
 
 <body>
+    <header id="header"></header>
+    <div id="slide">    <div class="container-fluid p-0 d-flex h-100">
+        <div id="bdSidebar"
+            class="d-flex flex-column flex-shrink-0 p-3 bg-success text-white offcanvas-md offcanvas-start"
+            style="width: 280px;">
+            <a href="#" class="navbar-brand">
+                <h5><i class="fa-solid fa-bomb me-2" style="font-size: 28px;"></i> Remote Dev</h5>
+            </a>
+            <hr>
+            <ul class="mynav nav nav-pills flex-column mb-auto">
+                <li class="nav-item mb-1">
+                    <a href="#" class="active">
+                        <i class="fa-solid fa-wave-square"></i>
+                        Overview
+                    </a>
+                </li>
+                <li class="nav-item mb-1">
+                    <a href="#" class="">
+                        <i class="fa-solid fa-bell"></i>
+                        Notifications
+                        <span class="notification-badge">5</span>
+                    </a>
+                </li>
+                <li class="nav-item mb-1">
+                    <a href="#" class="">
+                        <i class="fa-solid fa-chart-simple"></i>
+                        Analytics
+                    </a>
+                </li>
+                <li class="nav-item mb-1">
+                    <a href="#" class="">
+                        <i class="fa-solid fa-star"></i>
+                        Saved Reports
+                    </a>
+                </li>
+                <li class="nav-item mb-1">
+                    <a href="#" class="">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        Orders
+                    </a>
+                </li>
+                <li class="nav-item mb-1">
+                    <a href="#" class="">
+                        <i class="fa-solid fa-user"></i>
+                        User Reports
+                    </a>
+                </li>
+            </ul>
+            <hr>
+            <div class="d-flex">
+                <img src="img/profile_user.jpeg" class="img-fluid rounded me-2" width="50px" alt="">
+                <span>
+                    <h6 class="mt-1 mb-0">John Doe</h6>
+                    <small>johndoe@remotedev</small>
+                </span>
+            </div> 
+        </div>
 
-    <header>
-        <nav class="navbar bg-color-5blue fixed-top position-relative">
-            <div class="container-fluid m-3">
-                <div class="d-flex align-items-center collapse-div">
-                    <h1 class="collapse-fea">FEASVERSE - </h1>
-                    <h2 class="collapse-admin"> Administrador</h2>
+        <div class="bg-light flex-fill">
+            <div class="p-4">
+                <div class="row">
+                    <div class="col">
+                        <div id="contenedorMAIN" class="position-relative">
+
+                        </div>
+                    </div>
                 </div>
-                <div class="linea"></div>
-                <form class="d-flex align-items-center">
-                    <h1 class="navbar-brand text-white titillium-web-semibold margin-user">Usuario</h1>
-                    <button class="btn btn-outline-primary" type="button">
-                        <img src="/recursos/imagenes/icons/exitUser.svg" width="50px" height="50">
-                    </button>
             </div>
-        </nav>
-    </header>
 
-    <main>
-        <h3 id="mainTitle" class="titillium-web-extralight-italic"></h3>
+        </div>
+    </div></div>
+
+    <main id="mainContent">
+        <div id="mainTitle"></div>
     </main>
 
+    <footer id="footer"></footer>
+
+    <script src="script.js"></script>
     <!-- *Llamada al controlador de la página web -->
     <script type="text/javascript" src="../../controlador/utilidades(plantillas)/privado.js"></script>
     <!-- *Llamada al controlador del sitio privado -->
     <script type="text/javascript" src="../../controlador/privado/panel_principal.js"></script>
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
