--- a/vistas/privado/panel_principal.html
+++ b/vistas/privado/panel_principal.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- TODO Título del documento -->
-    <title></title>
+    <title>FeasVerse Panel Privado</title>
     <!-- Metadatos de la página web -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
     <link type="image/png" rel="icon" href="../../recursos/imagenes/icono.svg">
     <!-- *Llamada a las hojas de estilos propios de css -->
     <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
-    <link href="/recursos/estilos/privado/panel_principal.css" rel="stylesheet">
+    <link href="/recursos/estilos/privado/plantilla.css" rel="stylesheet">
     <!-- *Llamada a las hojas de estilos del framework -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -25,81 +25,134 @@
 
 <body>
     <header id="header"></header>
-    <div id="slide">    <div class="container-fluid p-0 d-flex h-100">
-        <div id="bdSidebar"
-            class="d-flex flex-column flex-shrink-0 p-3 bg-success text-white offcanvas-md offcanvas-start"
-            style="width: 280px;">
-            <a href="#" class="navbar-brand">
-                <h5><i class="fa-solid fa-bomb me-2" style="font-size: 28px;"></i> Remote Dev</h5>
-            </a>
-            <hr>
-            <ul class="mynav nav nav-pills flex-column mb-auto">
-                <li class="nav-item mb-1">
-                    <a href="#" class="active">
-                        <i class="fa-solid fa-wave-square"></i>
-                        Overview
-                    </a>
-                </li>
-                <li class="nav-item mb-1">
-                    <a href="#" class="">
-                        <i class="fa-solid fa-bell"></i>
-                        Notifications
-                        <span class="notification-badge">5</span>
-                    </a>
-                </li>
-                <li class="nav-item mb-1">
-                    <a href="#" class="">
-                        <i class="fa-solid fa-chart-simple"></i>
-                        Analytics
-                    </a>
-                </li>
-                <li class="nav-item mb-1">
-                    <a href="#" class="">
-                        <i class="fa-solid fa-star"></i>
-                        Saved Reports
-                    </a>
-                </li>
-                <li class="nav-item mb-1">
-                    <a href="#" class="">
-                        <i class="fa-solid fa-cart-shopping"></i>
-                        Orders
-                    </a>
-                </li>
-                <li class="nav-item mb-1">
-                    <a href="#" class="">
-                        <i class="fa-solid fa-user"></i>
-                        User Reports
-                    </a>
-                </li>
-            </ul>
-            <hr>
-            <div class="d-flex">
-                <img src="img/profile_user.jpeg" class="img-fluid rounded me-2" width="50px" alt="">
-                <span>
-                    <h6 class="mt-1 mb-0">John Doe</h6>
-                    <small>johndoe@remotedev</small>
-                </span>
-            </div> 
-        </div>
+    <div id="slide">
+        <div class="wrapper">
+            <aside id="sidebar">
+                <div class="d-flex position-relative">
+                    <button class="toggle-btn" type="button">
+                        <i class="lni lni-grid-alt"><img src="../../recursos/imagenes/logo.svg" class="img1"
+                                alt="FeasVerseCompany" width="50" height="50"></i>
+                    </button>
 
-        <div class="bg-light flex-fill">
-            <div class="p-4">
-                <div class="row">
-                    <div class="col">
-                        <div id="contenedorMAIN" class="position-relative">
-
-                        </div>
-                    </div>
+                    <div class="lineah"></div>
+                    <div class="lineah"></div>
                 </div>
+                <ul class="sidebar-nav">
+                    <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">
+                            <div class="contenedorItemNav">
+                                <i class="lni lni-user img"> <img src="/recursos/imagenes/icons/houseIcon.svg"
+                                        width="40" height="40"></i>
+                                <span class="text-nav text20 titillium-web-regular" >Inicio</span>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">
+                            <div class="contenedorItemNav">
+                                <i class="lni lni-user img"> <img src="/recursos/imagenes/icons/workersIcon.svg"
+                                        width="40" height="40"></i>
+                                <span class="text-nav text20 titillium-web-regular">Trabajadores</span>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">
+                            <div class="contenedorItemNav">
+                                <i class="lni lni-user img"> <img src="/recursos/imagenes/icons/clientIcon.svg"
+                                        width="40" height="40"></i>
+                                <span class="text-nav text20 titillium-web-regular">Clientes</span>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">
+                            <div class="contenedorItemNav">
+                                <i class="lni lni-user img"> <img src="/recursos/imagenes/icons/shoesIcon.svg"
+                                        width="40" height="40"></i>
+                                <span class="text-nav text20 titillium-web-regular">Zapatos</span>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">
+                            <div class="contenedorItemNav">
+                                <i class="lni lni-user img"> <img src="/recursos/imagenes/icons/pedidoIcon.svg"
+                                        width="40" height="40"></i>
+                                <span class="text-nav text20 titillium-web-regular">Pedidos</span>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">
+                            <div class="contenedorItemNav">
+                                <i class="lni lni-user img"> <img src="/recursos/imagenes/icons/marcaIcon.svg"
+                                        width="40" height="40"></i>
+                                <span class="text-nav text20 titillium-web-regular">Marcas</span>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">
+                            <div class="contenedorItemNav" >
+                                <i class="lni lni-user img"> <img src="/recursos/imagenes/icons/comentIcon.svg"
+                                        width="40" height="40"></i>
+                                <span class="text-nav text20 titillium-web-regular">Comentarios</span>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+                <div class="sidebar-footer">
+                    <a href="#" class="sidebar-link">
+                        <i class="lni lni-exit"></i>
+                        <span>Logout</span>
+                    </a>
+                </div>
+            </aside>
+            <div id="contenedorMAIN" class="position-relative">
+
             </div>
-
         </div>
-    </div></div>
-
+    </div>
     <main id="mainContent">
-        <div id="mainTitle"></div>
-    </main>
+        <div id="mainTitle" class="text40"></div>
+        <h1>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias voluptates laborum aliquid, fugiat
+            molestiae similique rerum natus dignissimos, id vero ducimus corporis? Nihil obcaecati numquam voluptatum
+            tempora quisquam, in pariatur?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptates in voluptatem sed cumque
+            eaque vel eligendi ea est dicta, quidem praesentium provident, unde quam eveniet ex quas quis veniam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi similique tempora libero qui voluptatibus
+            numquam adipisci alias ipsa! In, a nam? Deleniti unde quam blanditiis. Deserunt totam sed voluptate eius!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, iure? Totam recusandae suscipit laudantium
+            vitae optio delectus numquam, asperiores earum ipsa reiciendis dolores! Temporibus sit voluptates facere
+            dignissimos qui harum!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium animi numquam saepe voluptate. Maxime
+            quam illum a doloremque nostrum eligendi iusto dignissimos ea placeat provident aspernatur ipsa, culpa,
+            deleniti itaque.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos dolor nemo odio quam, beatae nulla tempore
+            repellendus porro modi, officiis deserunt veritatis consectetur? Dicta maiores rerum tempore molestias
+            quisquam iure.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque temporibus nobis magnam vitae explicabo
+            illum, veritatis perspiciatis, exercitationem necessitatibus ipsum sint cum quam consequatur vero sapiente
+            architecto voluptas, neque dolorem?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit accusantium facere saepe? Vitae vero dicta
+            beatae non commodi corrupti, qui sunt veritatis! Atque quas amet vero magni itaque soluta similique.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia similique corrupti tempore cum labore
+            eligendi blanditiis ea fugit nisi repellendus repudiandae, molestiae rerum, dolorum eos quia voluptas itaque
+            rem assumenda!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, fuga recusandae quae debitis quas,
+            voluptate repudiandae ea exercitationem iusto praesentium architecto nesciunt veritatis ut hic atque. Atque,
+            possimus rerum. Optio?
 
+        </h1>
+    </main>
     <footer id="footer"></footer>
 
     <script src="script.js"></script>
