--- a/vistas/privado/clientes.html
+++ b/vistas/privado/clientes.html
@@ -95,11 +95,60 @@
                 </div>
                 <div class="col-lg-12 bg-color-3blue" id="detalle_cliente">
                     <div class="d-flex offset-lg-1 align-items-center col-lg-4">
-                        <img src="../../recursos/imagenes/icono_usuario_circulo.svg" class="me-3 mt-4 mb-1" width="65" alt="icono de usuario en circulo">
+                        <img src="../../recursos/imagenes/icono_usuario_circulo.svg" class="me-3 mt-4 mb-3" width="65" alt="icono de usuario en circulo">
                         <h2 class="mt-2 mb-1 text-white">Detalles Clientes</h2>
                     </div>
-                    <div class="bg-color-white ">
-
+                    <div class="offset-lg-1 col-lg-10">
+                        <div class="col-lg-12 bg-color-white d-flex">
+                            <div class="offset-lg-2 justify-content-center">
+                                <div class="d-flex align-items-center col-lg-12 mt-4">
+                                    <label for="nombres" class="me-1">Nombres:</label>
+                                    <input class="form-control me-5" type="text"
+                                    placeholder="Adriana Paola"  disabled>
+                                    <label for="nombres" class="me-1">Apellidos:</label>
+                                    <input class="form-control" type="text"
+                                    placeholder="Menjia Mendez"  disabled>
+                                </div>
+                                <div class="d-flex align-items-center col-lg-12 mt-4">
+                                    <label for="nombres" class="me-1">Nombres:</label>
+                                    <input class="form-control me-5" type="text"
+                                    placeholder="Adriana Paola"  disabled>
+                                    <label for="nombres" class="me-1">Apellidos:</label>
+                                    <input class="form-control" type="text"
+                                    placeholder="Menjia Mendez"  disabled>
+                                </div>
+                                <div class="d-flex align-items-center col-lg-12 mt-4">
+                                    <label for="nombres" class="me-1">Nombres:</label>
+                                    <input class="form-control me-5" type="text"
+                                    placeholder="Adriana Paola"  disabled>
+                                    <label for="nombres" class="me-1">Apellidos:</label>
+                                    <input class="form-control" type="text"
+                                    placeholder="Menjia Mendez"  disabled>
+                                </div>
+                                <div class="d-flex align-items-center col-lg-12 mt-4">
+                                    <label for="nombres" class="me-1">Nombres:</label>
+                                    <input class="form-control me-5" type="text"
+                                    placeholder="Adriana Paola"  disabled>
+                                    <label for="nombres" class="me-1">Apellidos:</label>
+                                    <input class="form-control" type="text"
+                                    placeholder="Menjia Mendez"  disabled>
+                                </div>
+                                <div class="d-flex align-items-center col-lg-12 mt-4 mb-4">
+                                    <label for="nombres" class="me-1">Nombres:</label>
+                                    <input class="form-control me-5" type="text"
+                                    placeholder="Adriana Paola"  disabled>
+                                    <label for="nombres" class="me-1">Apellidos:</label>
+                                    <input class="form-control" type="text"
+                                    placeholder="Menjia Mendez"  disabled>
+                                </div>
+                            </div>
+                        </div>
+                        <button type="button" class="btn btn-primary titillium-web-regular btn-lg bg-color-5blue my-3 me-2" style="background-color: #146A93; border-color: #146A93;"><i
+                            class="bi bi-send"></i>
+                        Regresar</button>
+                        <button type="button" class="btn btn-primary titillium-web-regular btn-lg bg-color-5blue my-3" style="background-color: #146A93; border-color: #146A93;"><i
+                            class="bi bi-send"></i>
+                        Editar</button>
                     </div>
                 </div>
             </div>
