--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -13,15 +13,15 @@
     <!-- *IMPORTACIÓN DE RECURSOS EXTERNOS -->
     <!-- TODO Llamada al icono de la página web -->
     <link type="image/png" rel="icon" href="../../recursos/imagenes/icono.svg">
-    <!-- *Llamada a las hojas de estilos propios de css -->
-    <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
-    <link href="/recursos/estilos/privado/plantilla.css" rel="stylesheet">
-    <link href="../../recursos/estilos/privado/trabajadores.css" rel="stylesheet">
     <!-- *Llamada a las hojas de estilos del framework -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <!-- *Llamada a las hojas de estilos propios de css -->
+    <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
+    <link href="/recursos/estilos/privado/plantilla.css" rel="stylesheet">
+    <link href="../../recursos/estilos/privado/trabajadores.css" rel="stylesheet">
 </head>
 
 <body>
@@ -34,6 +34,42 @@
                 <div class="linea1"></div>
             </div>
 
+            <div class="ContenedorPestaña">
+                <ul class="nav nav-tabs ms-5">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link boton-cambiar-color" data-bs-toggle="tab" id="tabla-tab" type="button"
+                            data-bs-target="#tabla" role="tab" aria-controls="tabla" aria-selected="true"
+                            onclick="cambiarColor(this)">
+                            Tabla
+                        </button>
+                    </li>
+
+                    <li class="nav-item ms-3" role="presentation">
+                        <button class="nav-link boton-cambiar-color" data-bs-toggle="tab" id="agregar-tab" type="button"
+                            data-bs-target="#agregar" role="tab" aria-controls="agregar" aria-selected="true"
+                            onclick="cambiarColor(this)">
+                            Agregar
+                        </button>
+                    </li>
+                </ul>
+
+                <div class="tab-content contenidoP position-relative" id="">
+                    <div class="rectangle z-0"></div>
+                    <div class="tab-pane fade show z-3" role="tabpanel" id="agregar" aria-labelledby="agregar-tab">
+                        <h1>Agregar</h1>
+                    </div>
+                    <div class="tab-pane1 fade z-2 position-relative" role="tabpanel" id="tabla"
+                        aria-labelledby="tabla-tab">
+                    <div class="Contenedor tabla">
+
+                    </div>
+                        <div class="contenedorBotones">
+                            <button type="button" class="btn btn2 btn-primary ms-4 shadow">Bloquear</button>
+                            <button type="button" class="btn btn2 btn-primary ms-2 shadow">Desbloquear</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer id="footer"></footer>
